statefullset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: nginx-statefullset
spec:
  selector:
    matchLabels:
      app: nginx
  serviceName: "nginx"
  replicas: 3
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: nginx
        ports:
        - containerPort: 80
